--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,7 @@
   <groupId>me.callsen.taylor</groupId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <description>Java 11 project to load osm nodes/ways into combined table so all geometries can
-    easily be quieried during Adjancet Road processing.</description>
+  <description>Java 11 project demonstrating how to read GeoTIFF data using GeoTools.</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,43 +15,6 @@
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
   </properties>
-
-  <build>
-    <plugins>
-
-      <!-- Bundle into single executable jar including dependencies -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.4.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-
-              <!-- Remove -shaded from compiled jar name - https://stackoverflow.com/a/70792515 -->
-              <outputDirectory>${project.build.outputDirectory}</outputDirectory>
-              <finalName>${project.artifactId}-${project.version}</finalName>
-
-              <!-- Not required for this project (house keeping) -->
-              <createDependencyReducedPom>false</createDependencyReducedPom>
-
-              <transformers>
-                <transformer
-                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>${main.class}</mainClass>
-                </transformer>
-              </transformers>
-
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-    </plugins>
-  </build>
 
   <dependencies>
 
@@ -62,7 +24,7 @@
       <version>20220924</version>
     </dependency>
 
-    <!-- Geo Processing -->
+    <!-- GeoTools -->
     <dependency>
       <groupId>org.geotools</groupId>
       <artifactId>gt-geometry</artifactId>
@@ -79,14 +41,9 @@
       <version>22.2</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-imaging</artifactId>
-      <version>1.0-alpha3</version>
-    </dependency>
-
   </dependencies>
 
+  <!-- GeoTools -->
   <repositories>
     <repository>
       <id>osgeo</id>
